--- a/css/styles.css
+++ b/css/styles.css
@@ -147,9 +147,13 @@ img {
 }
 /* ------------------------------------------------------HERO------------------------------------------- */
 .hero{
-    background-image: url(../image/Img-hero.jpg);
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: url(../image/Img-hero.jpg), linear-gradient(to right, #2F303A, #2F303A);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     padding-top: 200px;
     padding-bottom: 200px;
     text-align: center;
