--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ img {
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
-    background-image: url(../image/Img-hero.jpg), linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4));
+    background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url(../image/Img-hero.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -262,7 +262,8 @@ img {
     border-radius: 0px 0px 4px 4px;
 }
 .name-position{
-    margin: 30px auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 .name-team{
     margin-bottom: 10px;
@@ -373,10 +374,12 @@ img {
     color: var(--whitecolor);
 }
 /* --------job-list---------- */
+.job-section{
+    padding-bottom: 94px;
+}
 .job-list{
     display: flex;
     flex-wrap: wrap;
-    padding-bottom: 94px;
     gap: var(--indent);
 }
 .job-item{
