--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,20 @@ img {
     color: var(--accent-color);
 }
 
+
+
+/* --------auth nav--------- */
+.auth-nav{
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+}
+.auth-nav .item+.item {
+    margin-left: 50px;
+}
 .header-number-link{
+    display: flex;
+    align-items: center;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -135,15 +148,9 @@ img {
 .header-number-link:focus{
     color: var(--accent-color);
 }
-
-/* --------auth nav--------- */
-.auth-nav{
-    display: flex;
-    margin-left: auto;
-    align-items: center;
-}
-.auth-nav .item+.item {
-    margin-left: 50px;
+.num-email-icon{
+    margin-right: 10px;
+    fill: currentColor;
 }
 /* ------------------------------------------------------HERO------------------------------------------- */
 .hero{
