--- a/css/styles.css
+++ b/css/styles.css
@@ -279,11 +279,38 @@ img {
     color: var(--primary-text-color);
 }
 .position{
+    margin-bottom: 16px;
     text-align: center;
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
+}
+.socials{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.socials-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    background-color: var(--whitecolor);
+    border-radius: 50%;
+}
+.socials-link:hover,
+.socials-link:focus{
+    background-color: var(--accent-color);
+}
+.socials-icon{
+    fill: var(--clients-logo);
+}
+.socials-link:hover .socials-icon,
+.socials-link:focus .socials-icon{
+    fill: var(--whitecolor);
 }
 /* -----------clients block------------ */
 .clients-block{
