--- a/css/styles.css
+++ b/css/styles.css
@@ -286,6 +286,7 @@ img {
     letter-spacing: 0.03em;
     color: var(--title-text-color);
 }
+/* --------------------icon clients-------------- */
 .socials{
     display: flex;
     justify-content: center;
